--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,10 @@ dependencies:
   flutter_svg:
   provider:
   http:
-  fluttertoast:
+  # fluttertoast:
+  table_calendar:
+  intl:
+  dropdown_button2:
 
 dev_dependencies:
   flutter_test:
